--- a/{{cookiecutter.repo_name}}/.github/workflows/release.yml
+++ b/{{cookiecutter.repo_name}}/.github/workflows/release.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   build:
     name: Upload Release Assets
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python 3.8
