--- a/{{cookiecutter.repo_name}}/.bumpversion.cfg
+++ b/{{cookiecutter.repo_name}}/.bumpversion.cfg
@@ -1,14 +1,14 @@
 [bumpversion]
-current_version = 0.1.2
+current_version = 0.1.0
 
 [bumpversion:file:pyproject.toml]
 search = version = "{current_version}"
 replace = version = "{new_version}"
 
-[bumpversion:file:shot.py]
+[bumpversion:file:{{cookiecutter.repo_name}}.py]
 search = __version__ = "{current_version}"
 replace = __version__ = "{new_version}"
 
-[bumpversion:file:tests/test_shot.py]
-search = shot(version=True) == "{current_version}"
-replace = shot(version=True) == "{new_version}"
+[bumpversion:file:tests/test_{{cookiecutter.repo_name}}.py]
+search = {{cookiecutter.repo_name}}(version=True) == "{current_version}"
+replace = {{cookiecutter.repo_name}}(version=True) == "{new_version}"
