--- a/{{cookiecutter.repo_name}}/.github/workflows/ci.yml
+++ b/{{cookiecutter.repo_name}}/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        python: [3.6, 3.7, 3.8]
+        python: [3.7, 3.8, 3.9, '3.10', 3.11]
 
     steps:
       - uses: actions/checkout@v1
@@ -36,6 +36,7 @@ jobs:
           pip install poetry
       - name: Install python packages
         run: |
+
           poetry install
       - name: Run tests
         run: |
