--- a/{{cookiecutter.repo_name}}/.github/workflows/ci.yml
+++ b/{{cookiecutter.repo_name}}/.github/workflows/ci.yml
@@ -11,8 +11,8 @@ on:
     paths-ignore:
       - README.md # don't run for readme changes.
   pull_request:
-    # branches:
-    #   - 'dependabot*'
+    branches:
+      - 'dependabot*'
   schedule:
     - cron: '0 0 * * 1' # Every monday at midnight
 
@@ -22,7 +22,7 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        python: [3.7, 3.8, 3.9, '3.10', 3.11]
+        python: [3.7, 3.8, 3.9]
 
     steps:
       - uses: actions/checkout@v1
